crates/compiler/src/tests/e2e/good/0512_struct_foo_impl/main.gom
struct Foo {
    bar: int32,
}

impl Foo {
    fn bar(self: Foo) -> string {
        "method: " + self.bar.to_string()
    }
}

fn main() {
    let f = Foo { bar: 42 };
    println(f.bar()); 
}
