crates/compiler/src/tests/e2e/bad/0012_impl_undefined_trait/main.gom
struct Rocket {
  fuel: int32,
}

impl Warpable for Rocket {
  fn warp(self: Rocket, factor: int32) -> unit {
    ()
  }
}

fn main() -> unit {
  ()
}
